--- a/package.json
+++ b/package.json
@@ -48,7 +48,15 @@
 		"clsx": "^2.1.1",
 		"echarts": "^5.6.0",
 		"felte": "^1.3.0",
+		"filepond-plugin-file-validate-type": "^1.2.9",
+		"filepond-plugin-image-exif-orientation": "^1.0.11",
+		"filepond-plugin-image-preview": "^4.6.12",
+		"flatpickr": "^4.6.13",
+		"lodash": "^4.17.21",
 		"nanoid": "^5.0.9",
+		"svelecte": "^5.1.4",
+		"svelte-filepond": "^0.2.2",
+		"svelte-flatpickr": "^3.3.5",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-legos": "^0.2.5",
 		"tailwind-merge": "^3.0.1",
